<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_task"
        android:checked="true"
        android:icon="@drawable/task"
        android:title="@string/tab1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_inbox"
        android:checked="false"
        android:icon="@drawable/inbox"
        android:title="@string/tab2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_lead"
        android:checked="false"
        android:icon="@drawable/lead_icon"
        android:title="@string/tab3"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_id"
        android:checked="false"
        android:icon="@drawable/id_icon"
        android:title="@string/tab4"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_account"
        android:checked="false"
        android:icon="@drawable/account"
        android:title="@string/tab5"
        app:showAsAction="ifRoom" />
</menu>