<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground"
    android:orientation="vertical">
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/round"
        android:text="New Task"
        android:id="@+id/btnNewTask"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/blue"
        android:textStyle="bold">
    </Button>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="Show Tasks Overdue"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            />
        <ImageView
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:id="@+id/imgReload"
            android:visibility="visible"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_3sdp"
            android:src="@drawable/reload"
            >
        </ImageView>
    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/white"
    android:layout_marginLeft="@dimen/_5sdp"
    android:layout_marginRight="@dimen/_5sdp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.1">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Task"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:gravity="center"
        android:textSize="@dimen/_10ssp"
        android:layout_weight="0.8">
        >
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/created_time"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/_10ssp"
        android:layout_weight="1">
        >
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allocated_time"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/_10ssp"
        android:layout_weight="1">
        >
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accuracy"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/_10ssp"
        android:layout_weight="1">
        >
    </TextView>
</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:background="@color/gray_light4">
    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp">

        <ListView
            android:id="@+id/lvhome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            >
        </ListView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtNoTask"
            android:visibility="gone"
            android:text="No Task are assigned"
            android:textColor="@color/gray_light"
            android:textSize="@dimen/_10ssp"
            android:gravity="center">
        </TextView>

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/multiple_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_5sdp"
            android:backgroundTint="@color/orange"
            fab:fab_addButtonColorNormal="@color/orange"
            fab:fab_addButtonColorPressed="@color/white_pressed"
            fab:fab_addButtonPlusIconColor="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/action_a"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:backgroundTint="@color/orange"
                    android:src="@drawable/add"
                    fab:fab_colorNormal="@color/orange"
                    fab:fab_colorPressed="@color/white"
                    fab:fab_title="Action A" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Create Task"
                    android:textColor="@color/orange"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </com.getbase.floatingactionbutton.FloatingActionsMenu>
    </RelativeLayout>
</LinearLayout>